[package]
name = "halite-bench"
version = "0.1.0"
authors = ["droundy <roundyd@physics.oregonstate.edu>"]
build = "build.rs"

[dependencies]
onionsalt = { version = "*", git = "https://github.com/droundy/onionsalt" }
time = "0.1"
arrayref = "0.3.0"
rand = "0.3" # Or a specific version
libc = "*"

sodiumoxide = "0.0.8"

[build-dependencies]
gcc = "0.3"

[dev-dependencies]
quickcheck = "*"
